--- a/starter-code/server/package.json
+++ b/starter-code/server/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
-    "cors": "^2.8.1",
+    "cors": "^2.8.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
@@ -18,6 +18,9 @@
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.2.0",
     "nodemon": "^1.11.0"
   }
 }
